# hdd-lifetime-prediction

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
src/hdd_lifetime_prediction/: __init__.py
src/hdd_lifetime_prediction/app/: app.py
src/hdd_lifetime_prediction/model/: infer.py  long-term-params.yaml  model.py  short-term-params.yaml  smartctl.py
src/hdd_lifetime_prediction/utils/: download_sources.sh  node.py  nodeparser.py
